# netsoul-purple

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac  gaim-netsoul.spec  gaim-netsoul.spec.in  libtool  mrproper  netsoul_config.h  pre_config.h  pre_config.h.in  stamp-h1
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  changelog  control  copyright  files  rules
pixmaps/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.mingw  netsoul.c  netsoul.h  ns_buddy.c  ns_chat.c  ns_connection.c  ns_listen.c  ns_output.c  ns_utils.c
