EXTRA_DIST = 	16/netsoul.png	\
		22/netsoul.png	\
		48/netsoul.png

pidginprotocolpix16dir = $(datadir)/pixmaps/pidgin/protocols/16
pidginprotocolpix22dir = $(datadir)/pixmaps/pidgin/protocols/22
pidginprotocolpix48dir = $(datadir)/pixmaps/pidgin/protocols/48

pidginprotocolpix16_DATA = 16/netsoul.png
pidginprotocolpix22_DATA = 22/netsoul.png
pidginprotocolpix48_DATA = 48/netsoul.png
