EXTRA_DIST = 	16/netsoul.png		\
		22/netsoul.png		\
		48/netsoul.png		\
		16/epitech.png		\
		16/epitech_inactive.png

pidginprotocolpix16dir		= $(datadir)/pixmaps/pidgin/protocols/16
pidginprotocolpix22dir		= $(datadir)/pixmaps/pidgin/protocols/22
pidginprotocolpix48dir		= $(datadir)/pixmaps/pidgin/protocols/48
pidginepitechpix16dir		= $(datadir)/pixmaps/pidgin/emblems/16
pidginepitechinactivepix16dir	= $(datadir)/pixmaps/pidgin/emblems/16

pidginprotocolpix16_DATA	= 16/netsoul.png
pidginprotocolpix22_DATA	= 22/netsoul.png
pidginprotocolpix48_DATA	= 48/netsoul.png
pidginepitechpix16_DATA		= 16/epitech.png
pidginepitechinactivepix16_DATA	= 16/epitech_inactive.png
